clean up and add tests for coverage.
